# enterprise-firefox

./: .cron.yml  .gitignore  .hgignore  .prettierignore  .stylelintrc.js  .taskcluster.yml  AGENTS.md  Cargo.toml  README.md  configure.py  eslint-file-globals.config.mjs  eslint-ignores.config.mjs  eslint-subdirs.config.mjs  mots.yaml  moz.build  moz.configure  stylelint-rollouts.config.js
.cargo/: config.toml.in
browser/: moz.configure
browser/extensions/felt/rust/: Cargo.toml  components.conf  felt.h  moz.build  nsIFelt.idl  nsIFeltRestartForced.idl
browser/extensions/felt/rust/src/: client.rs  components.rs  lib.rs  message.rs  utils.rs
caps/: BasePrincipal.cpp  DomainPolicy.h  OriginAttributes.h  nsJSPrincipals.h  nsScriptSecurityManager.cpp  nsScriptSecurityManager.h
chrome/: RegistryMessageUtils.h  nsChromeProtocolHandler.h
config/: check_macroassembler_style.py  check_spidermonkey_style.py  pathsub.h
hal/: HalSensor.h  HalWakeLock.h  HalWakeLockInternal.h
image/: AutoRestoreSVGState.h  DecoderFactory.cpp  FetchDecodedImage.cpp  FetchDecodedImage.h  SVGDocumentWrapper.cpp  SVGDocumentWrapper.h  VectorImage.cpp  imgLoader.cpp  moz.build
intl/: icu_sources_data.py
js/: moz.configure
mfbt/: Assertions.cpp  Attributes.h  Casting.h  EndianUtils.h  HashTable.h  InitializedOnce.h  MathAlgorithms.h  MruCache.h  PodOperations.h  RandomNum.cpp  Saturate.h  Span.h  StringBuffer.h  TaggedAnonymousMemory.cpp  TextUtils.h  Types.h  UniquePtrExtensions.cpp  UniquePtrExtensions.h  Utf8.cpp  Utf8.h  Variant.h  WeakPtr.h
services/: moz.build
view/: nsView.cpp  (+3 more)
(+4865 files in other folders)
